docs/versioned_docs/version-0.12.1/api/v2/crm/update-custom-object.api.mdx
---
id: update-custom-object
title: "Update customObject"
description: "Update customObject"
sidebar_label: "Update customObject"
hide_title: true
hide_table_of_contents: true
api: {"operationId":"updateCustomObject","tags":["CustomObjects"],"security":[{"ApiKeyAuth":[]}],"parameters":[{"name":"x-customer-id","in":"header","schema":{"type":"string","example":"my-customer-1"},"description":"The customer ID that uniquely identifies the customer in your application","required":true},{"name":"x-provider-name","in":"header","schema":{"type":"string","example":"salesforce"},"description":"The provider name","required":true},{"name":"custom_object_id","in":"path","required":true,"schema":{"type":"string","example":"0258cbc6-6020-430a-848e-aafacbadf4ae"}}],"requestBody":{"required":true,"content":{"application/json":{"schema":{"type":"object","properties":{"object":{"type":"object","properties":{"name":{"type":"string","example":"ticket"},"description":{"type":"string","nullable":true,"example":"Ticket object"},"labels":{"type":"object","properties":{"singular":{"type":"string","example":"Ticket"},"plural":{"type":"string","example":"Tickets"}},"required":["singular","plural"]},"fields":{"type":"array","items":{"type":"object","properties":{"display_name":{"type":"string","example":"Ticket ID"},"key_name":{"type":"string","example":"ticket_id"},"is_required":{"type":"boolean","example":false},"field_type":{"type":"string","enum":["string","number"]}},"required":["display_name","key_name","is_required","field_type"],"title":"custom_object_field"}}},"required":["name","description","labels","fields"],"title":"create_update_custom_object"}},"required":["object"]}}}},"responses":{"200":{"description":"CustomObject updated","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","properties":{"detail":{"type":"string","example":"name is a required field on model."},"problem_type":{"type":"string","example":"MISSING_REQUIRED_FIELD"},"source":{"type":"object","properties":{"pointer":{"type":"string","example":"irure consectetur"}}},"title":{"type":"string","example":"Missing Required Field"}},"example":[{"detail":"name is a required field on model.","problem_type":"MISSING_REQUIRED_FIELD","source":{"pointer":"irure consectetur"},"title":"Missing Required Field"},{"detail":"name is a required field on model.","problem_type":"MISSING_REQUIRED_FIELD","source":{"pointer":"et"},"title":"Missing Required Field"}]},"title":"errors"},"logs":{"type":"array","items":{"type":"object","properties":{"dashboard_view":{"type":"string","example":"https://api.supaglue.com/logs/99433219-8017-4acd-bb3c-ceb23d663832"},"log_id":{"type":"string","example":"99433219-8017-4acd-bb3c-ceb23d663832"},"log_summary":{"type":"object","properties":{"method":{"type":"string","example":"POST"},"status_code":{"type":"number","example":200},"url":{"type":"string","example":"https://harvest.greenhouse.io/v1/candidates/"}}}}},"example":[{"dashboard_view":"https://api.supaglue.com/logs/99433219-8017-4acd-bb3c-ceb23d663832","log_id":"99433219-8017-4acd-bb3c-ceb23d663832","log_summary":{"method":"POST","status_code":200,"url":"https://harvest.greenhouse.io/v1/candidates/"}},{"dashboard_view":"https://api.supaglue.com/logs/99433219-8017-4acd-bb3c-ceb23d663832","log_id":"99433219-8017-4acd-bb3c-ceb23d663832","log_summary":{"method":"POST","status_code":200,"url":"https://harvest.greenhouse.io/v1/candidates/"}}],"title":"logs"},"warnings":{"type":"array","items":{"type":"object","properties":{"detail":{"type":"string","example":"An unrecognized field, age, was passed in with request data."},"problem_type":{"type":"string","example":"UNRECOGNIZED_FIELD"},"source":{"type":"object","properties":{"pointer":{"type":"string","example":"Lorem ipsum"}}},"title":{"type":"string","example":"Unrecognized Field"}}},"example":[{"detail":"An unrecognized field, age, was passed in with request data.","problem_type":"UNRECOGNIZED_FIELD","source":{"pointer":"Lorem ipsum"},"title":"Unrecognized Field"},{"detail":"An unrecognized field, age, was passed in with request data.","problem_type":"UNRECOGNIZED_FIELD","source":{"pointer":"in"},"title":"Unrecognized Field"}],"title":"warnings"}}}}}}},"description":"Update customObject","method":"put","path":"/custom-objects/{custom_object_id}","servers":[{"url":"https://api.supaglue.io/crm/v2","description":"Supaglue API"}],"securitySchemes":{"ApiKeyAuth":{"type":"apiKey","name":"x-api-key","in":"header","description":"API key to allow developers to access the API"}},"jsonRequestBodyExample":{"object":{"name":"ticket","description":"Ticket object","labels":{"singular":"Ticket","plural":"Tickets"},"fields":[{"display_name":"Ticket ID","key_name":"ticket_id","is_required":false,"field_type":"string"}]}},"info":{"version":"0.12.0","title":"Supaglue CRM API","contact":{"name":"Supaglue"},"description":"#### Introduction\n\nWelcome to the Supaglue Actions API (CRM) documentation. You can use this API to write to third-party providers. \n\n[![Run in Postman](https://run.pstmn.io/button.svg)](https://god.gw.postman.com/run-collection/18172762-fa1c1bb5-8b11-475a-8e9b-d2ad988ccaf0?action=collection%2Ffork&source=rip_markdown&collection-url=entityId%3D18172762-fa1c1bb5-8b11-475a-8e9b-d2ad988ccaf0%26entityType%3Dcollection%26workspaceId%3D4d2a33f3-a9f9-41f4-ac2e-5ad4db4a5edb)\n\n#### Reading data\nTo read data from third-party providers, refer to Supaglue's [Managed Syncs](https://docs.supaglue.com/integration-patterns/managed-syncs) feature.\n\n#### Base API URL\n```\nhttps://api.supaglue.io/crm/v2\n```\n"},"postman":{"name":"Update customObject","description":{"type":"text/plain"},"url":{"path":["custom-objects",":custom_object_id"],"host":["{{baseUrl}}"],"query":[],"variable":[{"disabled":false,"description":{"content":"(Required) ","type":"text/plain"},"type":"any","value":"","key":"custom_object_id"}]},"header":[{"disabled":false,"description":{"content":"(Required) The customer ID that uniquely identifies the customer in your application","type":"text/plain"},"key":"x-customer-id","value":""},{"disabled":false,"description":{"content":"(Required) The provider name","type":"text/plain"},"key":"x-provider-name","value":""},{"key":"Content-Type","value":"application/json"},{"key":"Accept","value":"application/json"}],"method":"PUT","body":{"mode":"raw","raw":"\"\"","options":{"raw":{"language":"json"}}},"auth":{"type":"apikey","apikey":[{"type":"any","value":"x-api-key","key":"key"},{"type":"any","value":"<API Key>","key":"value"},{"type":"any","value":"header","key":"in"}]}}}
sidebar_class_name: "put api-method"
info_path: api/v2/crm/supaglue-crm-api
custom_edit_url: null
---

import ApiTabs from "@theme/ApiTabs";
import DiscriminatorTabs from "@theme/DiscriminatorTabs";
import MethodEndpoint from "@theme/ApiDemoPanel/MethodEndpoint";
import SecuritySchemes from "@theme/ApiDemoPanel/SecuritySchemes";
import MimeTabs from "@theme/MimeTabs";
import ParamsItem from "@theme/ParamsItem";
import ResponseSamples from "@theme/ResponseSamples";
import SchemaItem from "@theme/SchemaItem";
import SchemaTabs from "@theme/SchemaTabs";
import TabItem from "@theme/TabItem";

<h1 className={"openapi__heading"}>Update customObject</h1>

<MethodEndpoint method={"put"} path={"/custom-objects/{custom_object_id}"}></MethodEndpoint>

<SecuritySchemes infoPath={"api/v2/crm/supaglue-crm-api"}></SecuritySchemes>



Update customObject

## Request

<details style={{"marginBottom":"1rem"}} className={"openapi-markdown__details"} data-collapsed={false} open={true}><summary style={{}}><h3 className={"openapi-markdown__details-summary-header-params"}>Path Parameters</h3></summary><div><ul><ParamsItem className={"paramsItem"} param={{"name":"custom_object_id","in":"path","required":true,"schema":{"type":"string","example":"0258cbc6-6020-430a-848e-aafacbadf4ae"}}}></ParamsItem></ul></div></details><details style={{"marginBottom":"1rem"}} className={"openapi-markdown__details"} data-collapsed={false} open={true}><summary style={{}}><h3 className={"openapi-markdown__details-summary-header-params"}>Header Parameters</h3></summary><div><ul><ParamsItem className={"paramsItem"} param={{"name":"x-customer-id","in":"header","schema":{"type":"string","example":"my-customer-1"},"description":"The customer ID that uniquely identifies the customer in your application","required":true}}></ParamsItem><ParamsItem className={"paramsItem"} param={{"name":"x-provider-name","in":"header","schema":{"type":"string","example":"salesforce"},"description":"The provider name","required":true}}></ParamsItem></ul></div></details><MimeTabs className={"openapi-tabs__mime"}><TabItem label={"application/json"} value={"application/json-schema"}><details style={{}} className={"openapi-markdown__details mime"} data-collapsed={false} open={true}><summary style={{}} className={"openapi-markdown__details-summary-mime"}><h3 className={"openapi-markdown__details-summary-header-body"}>Body</h3><strong className={"openapi-schema__required"}>required</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>object</strong><span className={"openapi-schema__name"}> object</span><span className={"openapi-schema__divider"}></span><span className={"openapi-schema__required"}>required</span></span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"name"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"ticket"}}></SchemaItem><SchemaItem collapsible={false} name={"description"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"Ticket object"}}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>labels</strong><span className={"openapi-schema__name"}> object</span><span className={"openapi-schema__divider"}></span><span className={"openapi-schema__required"}>required</span></span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"singular"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"Ticket"}}></SchemaItem><SchemaItem collapsible={false} name={"plural"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"Tickets"}}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>fields</strong><span className={"openapi-schema__name"}> object[]</span><span className={"openapi-schema__divider"}></span><span className={"openapi-schema__required"}>required</span></span></summary><div style={{"marginLeft":"1rem"}}><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem","paddingBottom":".5rem"}}>Array [</div></li><SchemaItem collapsible={false} name={"display_name"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"Ticket ID"}}></SchemaItem><SchemaItem collapsible={false} name={"key_name"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"ticket_id"}}></SchemaItem><SchemaItem collapsible={false} name={"is_required"} required={true} schemaName={"boolean"} qualifierMessage={undefined} schema={{"type":"boolean","example":false}}></SchemaItem><SchemaItem collapsible={false} name={"field_type"} required={true} schemaName={"string"} qualifierMessage={"**Possible values:** [`string`, `number`]"} schema={{"type":"string","enum":["string","number"]}}></SchemaItem><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem"}}>]</div></li></div></details></SchemaItem></div></details></SchemaItem></ul></details></TabItem></MimeTabs><div><div><ApiTabs><TabItem label={"200"} value={"200"}><div>

CustomObject updated

</div><div><MimeTabs className={"openapi-tabs__mime"} schemaType={"response"}><TabItem label={"application/json"} value={"application/json"}><SchemaTabs className={"openapi-tabs__schema"}><TabItem label={"Schema"} value={"Schema"}><details style={{}} className={"openapi-markdown__details response"} data-collapsed={false} open={true}><summary style={{}} className={"openapi-markdown__details-summary-response"}><strong>Schema</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>errors</strong><span className={"openapi-schema__name"}> object[]</span></span></summary><div style={{"marginLeft":"1rem"}}><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem","paddingBottom":".5rem"}}>Array [</div></li><SchemaItem collapsible={false} name={"detail"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"name is a required field on model."}}></SchemaItem><SchemaItem collapsible={false} name={"problem_type"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"MISSING_REQUIRED_FIELD"}}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>source</strong><span className={"openapi-schema__name"}> object</span></span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"pointer"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"irure consectetur"}}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={false} name={"title"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"Missing Required Field"}}></SchemaItem><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem"}}>]</div></li></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>logs</strong><span className={"openapi-schema__name"}> object[]</span></span></summary><div style={{"marginLeft":"1rem"}}><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem","paddingBottom":".5rem"}}>Array [</div></li><SchemaItem collapsible={false} name={"dashboard_view"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"https://api.supaglue.com/logs/99433219-8017-4acd-bb3c-ceb23d663832"}}></SchemaItem><SchemaItem collapsible={false} name={"log_id"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"99433219-8017-4acd-bb3c-ceb23d663832"}}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>log_summary</strong><span className={"openapi-schema__name"}> object</span></span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"method"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"POST"}}></SchemaItem><SchemaItem collapsible={false} name={"status_code"} required={false} schemaName={"number"} qualifierMessage={undefined} schema={{"type":"number","example":200}}></SchemaItem><SchemaItem collapsible={false} name={"url"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"https://harvest.greenhouse.io/v1/candidates/"}}></SchemaItem></div></details></SchemaItem><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem"}}>]</div></li></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>warnings</strong><span className={"openapi-schema__name"}> object[]</span></span></summary><div style={{"marginLeft":"1rem"}}><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem","paddingBottom":".5rem"}}>Array [</div></li><SchemaItem collapsible={false} name={"detail"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"An unrecognized field, age, was passed in with request data."}}></SchemaItem><SchemaItem collapsible={false} name={"problem_type"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"UNRECOGNIZED_FIELD"}}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>source</strong><span className={"openapi-schema__name"}> object</span></span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"pointer"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"Lorem ipsum"}}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={false} name={"title"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"Unrecognized Field"}}></SchemaItem><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem"}}>]</div></li></div></details></SchemaItem></ul></details></TabItem><TabItem label={"Example (from schema)"} value={"Example (from schema)"}><ResponseSamples responseExample={"{\n  \"errors\": [\n    [\n      {\n        \"detail\": \"name is a required field on model.\",\n        \"problem_type\": \"MISSING_REQUIRED_FIELD\",\n        \"source\": {\n          \"pointer\": \"irure consectetur\"\n        },\n        \"title\": \"Missing Required Field\"\n      },\n      {\n        \"detail\": \"name is a required field on model.\",\n        \"problem_type\": \"MISSING_REQUIRED_FIELD\",\n        \"source\": {\n          \"pointer\": \"et\"\n        },\n        \"title\": \"Missing Required Field\"\n      }\n    ]\n  ],\n  \"logs\": [\n    {\n      \"dashboard_view\": \"https://api.supaglue.com/logs/99433219-8017-4acd-bb3c-ceb23d663832\",\n      \"log_id\": \"99433219-8017-4acd-bb3c-ceb23d663832\",\n      \"log_summary\": {\n        \"method\": \"POST\",\n        \"status_code\": 200,\n        \"url\": \"https://harvest.greenhouse.io/v1/candidates/\"\n      }\n    },\n    {\n      \"dashboard_view\": \"https://api.supaglue.com/logs/99433219-8017-4acd-bb3c-ceb23d663832\",\n      \"log_id\": \"99433219-8017-4acd-bb3c-ceb23d663832\",\n      \"log_summary\": {\n        \"method\": \"POST\",\n        \"status_code\": 200,\n        \"url\": \"https://harvest.greenhouse.io/v1/candidates/\"\n      }\n    }\n  ],\n  \"warnings\": [\n    {\n      \"detail\": \"An unrecognized field, age, was passed in with request data.\",\n      \"problem_type\": \"UNRECOGNIZED_FIELD\",\n      \"source\": {\n        \"pointer\": \"Lorem ipsum\"\n      },\n      \"title\": \"Unrecognized Field\"\n    },\n    {\n      \"detail\": \"An unrecognized field, age, was passed in with request data.\",\n      \"problem_type\": \"UNRECOGNIZED_FIELD\",\n      \"source\": {\n        \"pointer\": \"in\"\n      },\n      \"title\": \"Unrecognized Field\"\n    }\n  ]\n}"} language={"json"}></ResponseSamples></TabItem></SchemaTabs></TabItem></MimeTabs></div></TabItem></ApiTabs></div></div>
      